--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"better-sqlite3": "^10.0.0",
 		"framework7-icons": "^5.0.5",
-		"framework7-svelte": "^8.3.3"
+		"framework7-svelte": "^8.3.3",
+		"qrcode": "^1.5.3"
 	}
 }
