--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"type": "module",
 	"dependencies": {
 		"better-sqlite3": "^10.0.0",
+		"firebase": "^10.13.2",
 		"framework7-icons": "^5.0.5",
 		"framework7-svelte": "^8.3.3",
 		"qrcode": "^1.5.3"
